# EDU-SoftRasterizer

./: CMakeLists.txt  README.md
.cache/clangd/index/: app.cpp.5F1E67EF177BBB27.idx  app.h.8A8DA0DEC67759F5.idx  geometry.h.3922ED807FB71225.idx  gl.cpp.7979345606A1F264.idx  gl.h.BD5908342456E930.idx  mac_window.h.E807507AA2431F53.idx  main.cpp.51E737CAD061E542.idx  model.cpp.B8CA75F793984557.idx  model.h.8B9B131C4BFBA8BA.idx  shader.h.37241572C6D00A01.idx  tgaimage.cpp.4648575E8D890C6A.idx  tgaimage.h.F2EECDB11870C2C2.idx
src/: main.cpp
src/application/: app.cpp  app.h
src/core/: gl.cpp  gl.h  model.cpp  model.h
src/math/: geometry.h
src/platform/: mac_window.h  tgaimage.cpp  tgaimage.h
src/shaders/: shader.h
